crates/ark/src/lsp/snapshots/ark__lsp__folding_range__tests__nested_sibling_levels.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n{\n    # level 1 ####\n    1\n    # another level 1 ####\n    2\n}\n\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: Some(
            1,
        ),
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 2,
        start_character: None,
        end_line: 3,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 4,
        start_character: None,
        end_line: 6,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
